# qtrs

./: Cargo.toml
src/: types.rs
src/types/: builder.rs  category.rs  error.rs  from_json.rs  typedb.rs  typedef.rs  validation.rs
src/types/builder/: ref_visitor.rs
src/types/error/: _agg.rs  invalid_validation.rs  validation.rs
src/types/typedef/: enum_def.rs  newtype_def.rs  struct_def.rs
src/types/validation/: base.rs  restricted.rs  update.rs
src/types/validation/base/: v_any.rs  v_array.rs  v_bool.rs  v_date.rs  v_date_time.rs  v_enum.rs  v_float.rs  v_integer.rs  v_map.rs  v_newtype.rs  v_optional.rs  v_set.rs  v_string.rs  v_struct.rs  v_tuple.rs  v_unsigned.rs  v_variant.rs
src/types/validation/update/: ignore_restrictions.rs  keep_restrictions.rs  no_update.rs  type_only.rs
