[package]
name = "qtrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
itertools = "0.10.5"
once_cell = "1.17.0"
schemars = "0.8.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
url = "2.3.1"
